--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,9 @@ indent_size = 4
 indent_style = space
 insert_final_newline = true
 max_line_length = 120
+
+[*.yml]
+indent_size = 2
+
+[*.yaml]
+indent_size = 2
