--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
         "@navikt/nav-dekoratoren-moduler": "^2.1.5",
         "axios": "^1.6.7",
+        "cookie-parser": "^1.4.6",
         "express-async-handler": "1.2.0",
         "express-http-proxy": "^2.0.0",
         "helmet": "^7.1.0",
@@ -22,6 +23,7 @@
         "openid-client": "^5.4.0"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.17",
         "@types/express-http-proxy": "^1.6.3",
         "@types/fs-extra": "^11.0.1",
