--- a/storybook-static/project.json
+++ b/storybook-static/project.json
@@ -1,1 +1,29 @@
-{"generatedAt":1715080462687,"hasCustomBabel":false,"hasCustomWebpack":false,"hasStaticDirs":false,"hasStorybookEslint":false,"refCount":0,"packageManager":{"type":"npm","version":"10.2.4"},"preview":{"usesGlobals":false},"framework":{"name":"@storybook/react-vite","options":{}},"builder":"@storybook/builder-vite","renderer":"@storybook/react","storybookVersion":"8.0.9","storybookVersionSpecifier":"^8.0.9","language":"typescript","storybookPackages":{"@storybook/blocks":{"version":"8.0.9"},"@storybook/react":{"version":"8.0.9"},"@storybook/react-vite":{"version":"8.0.9"},"@storybook/test":{"version":"8.0.9"},"storybook":{"version":"8.0.9"}},"addons":{"@storybook/addon-links":{"version":"8.0.9"},"@storybook/addon-essentials":{"version":"8.0.9"},"@storybook/addon-onboarding":{"version":"8.0.9"},"@storybook/addon-interactions":{"version":"8.0.9"}}}
+{
+    "generatedAt": 1715080462687,
+    "hasCustomBabel": false,
+    "hasCustomWebpack": false,
+    "hasStaticDirs": false,
+    "hasStorybookEslint": false,
+    "refCount": 0,
+    "packageManager": { "type": "npm", "version": "10.2.4" },
+    "preview": { "usesGlobals": false },
+    "framework": { "name": "@storybook/react-vite", "options": {} },
+    "builder": "@storybook/builder-vite",
+    "renderer": "@storybook/react",
+    "storybookVersion": "8.0.9",
+    "storybookVersionSpecifier": "^8.0.9",
+    "language": "typescript",
+    "storybookPackages": {
+        "@storybook/blocks": { "version": "8.0.9" },
+        "@storybook/react": { "version": "8.0.9" },
+        "@storybook/react-vite": { "version": "8.0.9" },
+        "@storybook/test": { "version": "8.0.9" },
+        "storybook": { "version": "8.0.9" }
+    },
+    "addons": {
+        "@storybook/addon-links": { "version": "8.0.9" },
+        "@storybook/addon-essentials": { "version": "8.0.9" },
+        "@storybook/addon-onboarding": { "version": "8.0.9" },
+        "@storybook/addon-interactions": { "version": "8.0.9" }
+    }
+}
